# DocuChat

./: README (1).md  README (2).md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
docuchat/: __init__.py
docuchat/core/: __init__.py  document.py  rag.py  validator.py
docuchat/ui/: app.py
results/: eval_report.json
tests/: .gitignore  evaluate_rag.py  test_unit.py
tests/fixtures/: company_policy.txt  product_spec.txt  research_paper.txt
