[project]
name = "docuchat-opensource"
version = "2.0.0"
description = "RAG-powered document assistant — 100% Open Source using Ollama + LangChain"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.7.4",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "langchain-text-splitters>=0.2.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.0",
    "sentence-transformers>=2.7.0",
    "streamlit>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
